--- a/templates/warehousing/admin/content/outbound_reports.html
+++ b/templates/warehousing/admin/content/outbound_reports.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Outbound Reports</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,15 +22,14 @@
                         <li class="breadcrumb-item" id ="outbound_reports_nav">Outbound Reports</li>
                         <script>if(window.location.pathname == '/warehousing/admin/outbound_reports/'){document.getElementById("outbound_reports_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Outbound Reports</a>
-                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -63,7 +63,17 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Outbound Reports</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Outbound Reports</h3>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Outbound Report <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
@@ -116,8 +126,8 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="hospital_department_id">Hospital Department</label>
-                                        <select class="form-control" id="hospital_department_id" name="hospital_department_id" required>
+                                        <label for="hospital_department_id">Hospital Department</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="hospital_department_id" name="hospital_department_id" required>
                                         </select>
                                     </div>
                                 </div>
@@ -125,8 +135,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="employee_id">Employee</label>
-                                        <select class="form-control" id="employee_id" name="employee_id" required>
+                                        <label for="employee_id">Employee</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="employee_id" name="employee_id" required>
                                         </select>
                                     </div>
                                 </div>
@@ -134,8 +144,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="status">Status</label>
-                                        <select class="form-control" id="status" name="status" required>
+                                        <label for="status">Status</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="status" name="status" required>
                                             <option value="On Going">On Going</option>
                                         </select>
                                     </div>
@@ -144,7 +154,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="total_quantity" id="total_quantityLabel">Total Quantity</label>
+                                        <label for="total_quantity" id="total_quantityLabel">Total Quantity</label> <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="total_quantity" placeholder="Enter Total Quantity" required>
                                     </div>
                                 </div>
@@ -152,7 +162,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="expected_shipment_date" id="expected_shipment_dateLabel">Expected Shipment Date</label>
+                                        <label for="expected_shipment_date" id="expected_shipment_dateLabel">Expected Shipment Date</label> <span class="required-field"> </span>
                                         <input type="date" class="form-control" id="expected_shipment_date" placeholder="Enter Reorder Interval" required>
                                     </div>
                                 </div>
@@ -160,7 +170,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="complete_shipment_date" id="complete_shipment_dateLabel">Shipped Date</label>
+                                        <label for="complete_shipment_date" id="complete_shipment_dateLabel">Shipped Date</label> <span class="required-field"> </span>
                                         <input type="date" class="form-control" id="complete_shipment_date" placeholder="Enter Reorder Interval" required>
                                     </div>
                                 </div>
@@ -197,8 +207,8 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_hospital_department_id">Hospital Department</label>
-                                        <select class="form-control" id="e_hospital_department_id" name="e_hospital_department_id" required>
+                                        <label for="e_hospital_department_id">Hospital Department</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_hospital_department_id" name="e_hospital_department_id" required>
                                         </select>
                                     </div>
                                 </div>
@@ -206,8 +216,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_employee_id">Employee</label>
-                                        <select class="form-control" id="e_employee_id" name="e_employee_id" required>
+                                        <label for="e_employee_id">Employee</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_employee_id" name="e_employee_id" required>
                                         </select>
                                     </div>
                                 </div>
@@ -215,8 +225,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_status">Status</label>
-                                        <select class="form-control" id="e_status" name="e_status" required>
+                                        <label for="e_status">Status</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_status" name="e_status" required>
                                             <option value="On Going">On Going</option>
                                         </select>
                                     </div>
@@ -225,7 +235,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_total_quantity" id="e_total_quantityLabel">Total Quantity</label>
+                                        <label for="e_total_quantity" id="e_total_quantityLabel">Total Quantity</label> <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="e_total_quantity" placeholder="Enter Total Quantity" required>
                                     </div>
                                 </div>
@@ -233,7 +243,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="expected_shipment_date" id="e_expected_shipment_dateLabel">Expected Shipment Date</label>
+                                        <label for="expected_shipment_date" id="e_expected_shipment_dateLabel">Expected Shipment Date</label> <span class="required-field"> </span>
                                         <input type="date" class="form-control" id="e_expected_shipment_date" placeholder="Enter Reorder Interval" required>
                                     </div>
                                 </div>
@@ -241,7 +251,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="complete_shipment_date" id="e_complete_shipment_dateLabel">Shipped Date</label>
+                                        <label for="complete_shipment_date" id="e_complete_shipment_dateLabel">Shipped Date</label> <span class="required-field"> </span>
                                         <input type="date" class="form-control" id="e_complete_shipment_date" placeholder="Enter Reorder Interval" required>
                                     </div>
                                 </div>
@@ -259,6 +269,38 @@
         </div><!-- /.modal -->
     </div>
     <!-- END editing Outbound Report Modal -->
+       <!-- Delete Modal -->
+       <div class="modal fade" id="delete_modal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-exclamation-triangle mr-1"></i>
+                        Confirmation</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                        <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                                <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                        <!-- END BUTTONS -->
+                        </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Delete Modal -->
 {%endblock%}
 
 {%block scripts%}
