--- a/templates/warehousing/admin/content/viewOutboundReport.html
+++ b/templates/warehousing/admin/content/viewOutboundReport.html
@@ -10,16 +10,17 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Outbound Report Detail</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
                         <li class="breadcrumb-item" id ="supplies_nav"><a href="/warehousing/admin/supplies">Supplies</a></li>                    </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
         </div><!-- /.container-fluid -->
@@ -166,7 +167,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="supply_id">Supply</label>
-                                        <select class="form-control" id="supply_id" name="supply_id">
+                                        <select class="form-control js-example-basic-single" id="supply_id" name="supply_id">
                                         </select>
                                     </div>
                                 </div>
@@ -211,7 +212,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="e_hospital_department_id">Hospital Department</label>
-                                            <select class="form-control" id="e_hospital_department_id" name="e_hospital_department_id" required>
+                                            <select class="form-control js-example-basic-single" id="e_hospital_department_id" name="e_hospital_department_id" required>
                                             </select>
                                         </div>
                                     </div>
@@ -220,7 +221,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="e_employee_id">Employee</label>
-                                            <select class="form-control" id="e_employee_id" name="e_employee_id" required>
+                                            <select class="form-control js-example-basic-single" id="e_employee_id" name="e_employee_id" required>
                                             </select>
                                         </div>
                                     </div>
@@ -229,7 +230,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label for="e_status">Status</label>
-                                            <select class="form-control" id="e_status" name="e_status" required>
+                                            <select class="form-control js-example-basic-single" id="e_status" name="e_status" required>
                                                 <option value="On Going">On Going</option>
                                             </select>
                                         </div>
