--- a/templates/warehousing/manager/content/inventory_locations.html
+++ b/templates/warehousing/manager/content/inventory_locations.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Inventory Locations</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/manager/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,16 +22,15 @@
                         <li class="breadcrumb-item" id ="inventory_locations_nav">Inventory Locations</li>
                         <script>if(window.location.pathname == '/warehousing/manager/inventory_locations/'){document.getElementById("inventory_locations_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <br>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inventory Location</a>
-                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -64,7 +64,17 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Inventory Location</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Inventory Locations</h3>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Inventory Location <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
@@ -113,7 +123,7 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="inventory_location_name" id="inventory_location_nameLabel">Inventory Location Name</label>
+                                        <label for="inventory_location_name" id="inventory_location_nameLabel">Inventory Location Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="inventory_location_name" placeholder="Inventory Location Name" required>
                                     </div>
                                 </div>
@@ -121,8 +131,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supply_category_id" id="supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="supply_category_id" name="supply_category_id">
+                                        <label for="supply_category_id" id="supply_category_idLabel">Category</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="supply_category_id" name="supply_category_id">
                                         </select>
                                         
                                     </div>
@@ -163,7 +173,7 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_inventory_location_name" id="e_inventory_location_nameLabel">Inventory Location Name</label>
+                                        <label for="e_inventory_location_name" id="e_inventory_location_nameLabel">Inventory Location Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_inventory_location_name" placeholder="Category" required>
                                     </div>
                                 </div>
@@ -171,8 +181,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supply_category_id" id="e_supply_category_idLabel">Category</label>
-                                        <select class="form-control" id="e_supply_category_id" name="e_supply_category_id">
+                                        <label for="e_supply_category_id" id="e_supply_category_idLabel">Category</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_supply_category_id" name="e_supply_category_id">
                                         </select>
                                         
                                     </div>
@@ -192,6 +202,39 @@
         </div><!-- /.modal -->
     </div>
     <!-- END editing Inventory Location Modal -->
+
+       <!-- Delete Modal -->
+       <div class="modal fade" id="delete_modal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-exclamation-triangle mr-1"></i>
+                        Confirmation</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                        <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                                <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                        <!-- END BUTTONS -->
+                        </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Delete Modal -->
 {%endblock%}
 
 {%block scripts%}
