--- a/templates/warehousing/staff/content/dashboard.html
+++ b/templates/warehousing/staff/content/dashboard.html
@@ -11,7 +11,7 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Dashboard</h1> 
-                    <div class="small text-secondary">This is the STAFF</div>
+                    <p class="text-muted">This is STAFF</p>
                 </div>
     
                 <!-- Breadcrumb -->
