--- a/templates/warehousing/staff/content/viewRequest.html
+++ b/templates/warehousing/staff/content/viewRequest.html
@@ -10,17 +10,18 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Request Detail</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/staff/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/staff/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
                         <li class="breadcrumb-item" id ="supplies_nav"><a href="/warehousing/staff/request">Request</a></li>                    
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
         </div><!-- /.container-fluid -->
