--- a/templates/warehousing/admin/content/employees.html
+++ b/templates/warehousing/admin/content/employees.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Employees</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,15 +22,14 @@
                         <li class="breadcrumb-item" id ="employees_nav">Employees</li>
                         <script>if(window.location.pathname == '/warehousing/admin/employees/'){document.getElementById("employees_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Employee</a>
-                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -63,7 +63,17 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Employees</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Employees</h3>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Employee <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
@@ -119,7 +129,8 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="user_id" id="user_idLabel">User</label>
-                                        <select class="form-control" id="user_id" name="user_id">
+                                        <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single"  style="height: 1000px" id="user_id" name="user_id">
                                             <option value="">Not a System User</option>
                                         </select>
                                     </div>
@@ -129,7 +140,8 @@
                                <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="user_type">Employee Type</label>
-                                        <select class="form-control" id="user_type" name="user_type">
+                                        <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="user_type" name="user_type">
                                             <option value="Manager">Manager</option>
                                             <option value="Staff">Staff</option>
                                             <option value="Driver">Driver</option>
@@ -142,6 +154,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="employee_first_name" id="employee_first_nameLabel">First Name</label>
+                                        <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="employee_first_name" placeholder="First Name" required>
                                     </div>
                                 </div>
@@ -158,6 +171,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="employee_last_name" id="employee_last_nameLabel">Last Name</label>
+                                        <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="employee_last_name" placeholder="Last Name" required>
                                     </div>
                                 </div>
@@ -166,6 +180,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="employee_age" id="employee_ageLabel">Age</label>
+                                        <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="employee_age" placeholder="Enter Employee Age" required>
                                     </div>
                                 </div>
@@ -174,6 +189,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="employee_contact" id="employee_contactLabel">Contact #</label>
+                                        <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="employee_contact" placeholder="Enter Employee Contact#" required>
                                     </div>
                                 </div>
@@ -182,6 +198,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="employee_address" id="employee_addressLabel">Address </label>
+                                        <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="employee_address" placeholder="Enter Employee Address" required>
                                     </div>
                                 </div>
@@ -221,8 +238,8 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_user_id" id="e_user_idLabel">User</label>
-                                        <select class="form-control" id="e_user_id" name="e_user_id">
+                                        <label for="e_user_id" id="e_user_idLabel">User</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_user_id" name="e_user_id">
                                             <option value="">Not a System User</option>
                                         </select>
                                     </div>
@@ -231,8 +248,8 @@
                             <div class="row">
                                <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_user_type">Employee Type</label>
-                                        <select class="form-control" id="e_user_type" name="e_user_type">
+                                        <label for="e_user_type">Employee Type</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_user_type" name="e_user_type">
                                             <option value="Manager">Manager</option>
                                             <option value="Staff">Staff</option>
                                             <option value="Driver">Driver</option>
@@ -244,7 +261,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_employee_first_name" id="e_employee_first_nameLabel">First Name</label>
+                                        <label for="e_employee_first_name" id="e_employee_first_nameLabel">First Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_employee_first_name" placeholder="First Name" required>
                                     </div>
                                 </div>
@@ -252,7 +269,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_employee_middle_name" id="e_employee_middle_nameLabel">Middle Name</label>
+                                        <label for="e_employee_middle_name" id="e_employee_middle_nameLabel">Middle Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_employee_middle_name" placeholder="Middle Name">
                                     </div>
                                 </div>
@@ -260,7 +277,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_employee_last_name" id="e_employee_last_nameLabel">Last Name</label>
+                                        <label for="e_employee_last_name" id="e_employee_last_nameLabel">Last Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_employee_last_name" placeholder="Last Name" required>
                                     </div>
                                 </div>
@@ -268,7 +285,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_employee_age" id="e_employee_ageLabel">Age</label>
+                                        <label for="e_employee_age" id="e_employee_ageLabel">Age</label> <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="e_employee_age" placeholder="Enter Employee Age" required>
                                     </div>
                                 </div>
@@ -276,7 +293,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_employee_contact" id="e_employee_contactLabel">Contact #</label>
+                                        <label for="e_employee_contact" id="e_employee_contactLabel">Contact #</label> <span class="required-field"> </span>
                                         <input type="number" maxlength="13" class="form-control" id="e_employee_contact" placeholder="Enter Employee Contact#" required>
                                     </div>
                                 </div>
@@ -284,7 +301,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_employee_address" id="e_employee_addressLabel">Address </label>
+                                        <label for="e_employee_address" id="e_employee_addressLabel">Address </label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_employee_address" placeholder="Enter Employee Address" required>
                                     </div>
                                 </div>
@@ -304,9 +321,48 @@
     </div>
     <!-- END Editing Employee Modal -->
 
+    <!-- Delete Modal -->
+    <div class="modal fade" id="delete_modal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-exclamation-triangle mr-1"></i>
+                        Confirmation</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                        <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                                <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                        <!-- END BUTTONS -->
+                        </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Delete Modal -->
+
 {%endblock%}
 
 {%block scripts%}
+    <script>
+        // In your Javascript (external .js resource or <script> tag)
+        $(document).ready(function() {
+            $('.js-example-basic-single').select2();
+        });
+    </script>
     <script src="{{url_for('static', path='/dist/js/warehousing/admin/employees.js')}}"></script>
 {%endblock%}
 
