--- a/templates/warehousing/admin/content/hospital_departments.html
+++ b/templates/warehousing/admin/content/hospital_departments.html
@@ -13,7 +13,7 @@
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,15 +21,14 @@
                         <li class="breadcrumb-item" id ="hospital_departments_nav">Hospital Departments</li>
                         <script>if(window.location.pathname == '/warehousing/admin/hospital_departments/'){document.getElementById("hospital_departments_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Hospital Department</a>
-                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -63,7 +62,18 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Hospital Departments</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Hospital Departments</h3>
+                                    <p class="text-muted">This is subheading</p>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Hospital Department <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
@@ -113,8 +123,8 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="hospital_manager_id" id="hospital_manager_idLabel">Hospital Department Manager</label>
-                                        <select class="form-control" id="hospital_manager_id" name="hospital_manager_id">
+                                        <label for="hospital_manager_id" id="hospital_manager_idLabel">Hospital Department Manager</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="hospital_manager_id" name="hospital_manager_id">
                                         </select>
                                     </div>
                                 </div>
@@ -122,7 +132,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="hospital_department_name" id="hospital_department_nameLabel">Hospital Department Name</label>
+                                        <label for="hospital_department_name" id="hospital_department_nameLabel">Hospital Department Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="hospital_department_name" placeholder="Hospital Department Name" required>
                                     </div>
                                 </div>
@@ -130,7 +140,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="hospital_department_description" id="hospital_department_descriptionLabel">Description </label>
+                                        <label for="hospital_department_description" id="hospital_department_descriptionLabel">Description </label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="hospital_department_description" placeholder="Enter Description Description" required>
                                     </div>
                                 </div>
@@ -170,8 +180,8 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_hospital_manager_id" id="e_hospital_manager_idLabel">Hospital Department Manager</label>
-                                        <select class="form-control" id="e_hospital_manager_id" name="e_hospital_manager_id">
+                                        <label for="e_hospital_manager_id" id="e_hospital_manager_idLabel">Hospital Department Manager</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_hospital_manager_id" name="e_hospital_manager_id">
                                         </select>
                                     </div>
                                 </div>
@@ -179,7 +189,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_hospital_department_name" id="e_hospital_department_nameLabel">Hospital Department Name</label>
+                                        <label for="e_hospital_department_name" id="e_hospital_department_nameLabel">Hospital Department Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_hospital_department_name" placeholder="Hospital Department Name" required>
                                     </div>
                                 </div>
@@ -187,7 +197,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_hospital_department_description" id="e_hospital_department_descriptionLabel">Description </label>
+                                        <label for="e_hospital_department_description" id="e_hospital_department_descriptionLabel">Description </label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_hospital_department_description" placeholder="Enter Description Description" required>
                                     </div>
                                 </div>
@@ -206,6 +216,39 @@
         </div><!-- /.modal -->
     </div>
     <!-- END Editing Hospital Department Modal -->
+
+    <!-- Delete Modal -->
+    <div class="modal fade" id="delete_modal">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">
+                    <i class= "fas fa-exclamation-triangle mr-1"></i>
+                    Confirmation</h4>
+                <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal_viewing">
+                    <!-- CONTENT -->
+                    <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                        <div class="card-body">
+                            Are you sure you want to Delete?
+                            <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                        </div>
+                    <!-- END CONTENT  -->
+                        <!-- BUTTONS -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                        </div>
+                    <!-- END BUTTONS -->
+                    </form>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+</div>
+<!-- END Delete Modal -->
 {%endblock%}
 
 {%block scripts%}
