--- a/templates/warehousing/admin/content/inventories.html
+++ b/templates/warehousing/admin/content/inventories.html
@@ -13,7 +13,7 @@
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,16 +21,15 @@
                         <li class="breadcrumb-item" id ="inventories_nav">Inventories</li>
                         <script>if(window.location.pathname == '/warehousing/admin/inventories/'){document.getElementById("inventories_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <br>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Inventory</a>
-                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -64,7 +63,18 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Inventories</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Inventories</h3>
+                                    <p class="text-muted">This is subheading</p>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Inventory <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
@@ -114,8 +124,8 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="inventory_location_id" id="inventory_location_idLabel">Location</label>
-                                        <select class="form-control" id="inventory_location_id" name="inventory_location_id">
+                                        <label for="inventory_location_id" id="inventory_location_idLabel">Location</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="inventory_location_id" name="inventory_location_id">
                                         </select>
                                         
                                     </div>
@@ -124,8 +134,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supply_id" id="supply_idLabel">Supply</label>
-                                        <select class="form-control" id="supply_id" name="supply_id">
+                                        <label for="supply_id" id="supply_idLabel">Supply</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="supply_id" name="supply_id">
                                         </select>
                                     </div>
                                 </div>
@@ -165,8 +175,8 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_inventory_location_id" id="e_inventory_location_idLabel">Location</label>
-                                        <select class="form-control" id="e_inventory_location_id" name="e_inventory_location_id">
+                                        <label for="e_inventory_location_id" id="e_inventory_location_idLabel">Location</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_inventory_location_id" name="e_inventory_location_id">
 
                                         </select>
                                         
@@ -176,8 +186,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supply_id" id="e_supply_idLabel">Supply</label>
-                                        <select class="form-control" id="e_supply_id" name="e_supply_id">
+                                        <label for="e_supply_id" id="e_supply_idLabel">Supply</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_supply_id" name="e_supply_id">
                                             
                                         </select>
                                     </div>
@@ -197,6 +207,38 @@
         </div><!-- /.modal -->
     </div>
     <!-- END editing Inventory Modal -->
+       <!-- Delete Modal -->
+       <div class="modal fade" id="delete_modal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-exclamation-triangle mr-1"></i>
+                        Confirmation</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                        <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                                <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                        <!-- END BUTTONS -->
+                        </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Delete Modal -->
 {%endblock%}
 
 {%block scripts%}
