--- a/templates/warehousing/admin/content/return.html
+++ b/templates/warehousing/admin/content/return.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Return</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,15 +22,14 @@
                         <li class="breadcrumb-item" id ="return_nav">Return</li>
                         <script>if(window.location.pathname == '/warehousing/admin/return/'){document.getElementById("return_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal" onClick="return addData()">Add New Return</a>
-                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -63,7 +63,17 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Return</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Returns</h3>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Return <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
@@ -113,7 +123,7 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="return_date" id="return_dateLabel">Return Date</label>
+                                        <label for="return_date" id="return_dateLabel">Return Date</label> <span class="required-field"> </span>
                                         <input type="date" class="form-control" id="return_date" placeholder="Enter Date">
                                     </div>
                                 </div>
@@ -121,8 +131,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="returner">Returner</label>
-                                        <select class="form-control" id="returner" name="returner">
+                                        <label for="returner">Returner</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="returner" name="returner">
                                             <option value="Warehouse">Warehouse</option>
                                             <option value="Procurement">Procurement</option>
                                             <option value="Hospital Department">Hospital Department</option>
@@ -133,8 +143,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="return_type">Return type</label>
-                                        <select class="form-control" id="return_type" name="return_type">
+                                        <label for="return_type">Return type</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="return_type" name="return_type">
                                             <option value="For Return">For Return</option>
                                             <option value="To Return">To Return</option>
                                         </select>
@@ -144,8 +154,8 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="return_status" id="return_statusLabel">Return Status</label>
-                                        <select class="form-control" id="return_status" name="return_status">
+                                        <label for="return_status" id="return_statusLabel">Return Status</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="return_status" name="return_status">
                                             <option value="Pending">Pending</option>
                                             <option value="For Delivery">For Delivery</option>
                                         </select>
@@ -165,6 +175,38 @@
         </div><!-- /.modal -->
     </div>
     <!-- END Adding User Modal -->
+       <!-- Delete Modal -->
+       <div class="modal fade" id="delete_modal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-exclamation-triangle mr-1"></i>
+                        Confirmation</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                        <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                                <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                        <!-- END BUTTONS -->
+                        </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Delete Modal -->
 {%endblock%}
 
 {%block scripts%}
