--- a/templates/warehousing/admin/content/suppliers.html
+++ b/templates/warehousing/admin/content/suppliers.html
@@ -12,10 +12,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Suppliers</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -23,15 +24,14 @@
                         <li class="breadcrumb-item" id ="suppliers_nav">Suppliers</li>
                         <script>if(window.location.pathname == '/warehousing/admin/suppliers/'){document.getElementById("suppliers_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <div class="row">     
                 <!-- Button -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <a href="#" class="btn btn-success" data-toggle="modal" data-target="#adding_modal">Add New Suppliers</a>
-                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
-                </div>
+                </div> -->
                 <!-- / Button -->
             </div>
         </div><!-- /.container-fluid -->
@@ -65,7 +65,17 @@
                     <div class="card card-primary card-outline">
                         <!-- Card Header -->
                         <div class="card-header">
-                            <h3 class="card-title">Suppliers</h3>
+                            <div class="row"> 
+                                <div class="col-md-6">
+                                    <h3 class="card-title">Suppliers</h3>
+                                </div>
+                                <!-- Button -->
+                                <div class="col-md-6">
+                                    <button class="btn btn-sm btn-primary float-right" data-toggle="modal" data-target="#adding_modal">Add New Supplier <i class="fas fa-plus"></i></button>
+                                    <!-- <input type="submit" value="Create new Project" class="btn btn-success float-right"> -->
+                                </div>
+                                <!-- / Button -->
+                            </div>
                         </div>
                         <!-- /.card-header -->
 
@@ -116,7 +126,7 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supplier_name" id="supplier_nameLabel">Supplier Name</label>
+                                        <label for="supplier_name" id="supplier_nameLabel">Supplier Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="supplier_name" placeholder="Enter Supplier Name" required>
                                     </div>
                                 </div>
@@ -124,7 +134,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supplier_contact" id="supplier_contactLabel">Supplier Contact</label>
+                                        <label for="supplier_contact" id="supplier_contactLabel">Supplier Contact</label> <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="supplier_contact" placeholder="Enter Supplier Contact" required>
                                     </div>
                                 </div>
@@ -132,7 +142,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supplier_email" id="supplier_emailLabel">Supplier Email</label>
+                                        <label for="supplier_email" id="supplier_emailLabel">Supplier Email</label> <span class="required-field"> </span>
                                         <input type="email" class="form-control" id="supplier_email" placeholder="Enter Supplier Email" required>
                                     </div>
                                 </div>
@@ -140,7 +150,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="supplier_description" id="supplier_descriptionLabel">Supplier Descrription</label>
+                                        <label for="supplier_description" id="supplier_descriptionLabel">Supplier Descrription</label> <span class="required-field"> </span>
                                         <textarea class="form-control" id="supplier_description" placeholder="Enter Supplier Description"></textarea>
                                     </div>
                                 </div>
@@ -179,7 +189,7 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supplier_name" id="e_supplier_nameLabel">Supplier Name</label>
+                                        <label for="e_supplier_name" id="e_supplier_nameLabel">Supplier Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_supplier_name" placeholder="Enter Supplier Name" required>
                                     </div>
                                 </div>
@@ -187,7 +197,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supplier_contact" id="e_supplier_contactLabel">Supplier Contact</label>
+                                        <label for="e_supplier_contact" id="e_supplier_contactLabel">Supplier Contact</label> <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="e_supplier_contact" placeholder="Enter Supplier Contact" required>
                                     </div>
                                 </div>
@@ -195,7 +205,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supplier_email" id="e_supplier_emailLabel">Supplier Email</label>
+                                        <label for="e_supplier_email" id="e_supplier_emailLabel">Supplier Email</label> <span class="required-field"> </span>
                                         <input type="email" class="form-control" id="e_supplier_email" placeholder="Enter Supplier Email" required>
                                     </div>
                                 </div>
@@ -203,7 +213,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_supplier_description" id="e_supplier_descriptionLabel">Supplier Descrription</label>
+                                        <label for="e_supplier_description" id="e_supplier_descriptionLabel">Supplier Descrription</label> <span class="required-field"> </span>
                                         <textarea class="form-control" id="e_supplier_description" placeholder="Enter Supplier Description"></textarea>
                                     </div>
                                 </div>
@@ -221,6 +231,38 @@
         </div><!-- /.modal -->
     </div>
     <!-- END Editing Supplier Modal -->
+       <!-- Delete Modal -->
+       <div class="modal fade" id="delete_modal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-exclamation-triangle mr-1"></i>
+                        Confirmation</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                        <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                                <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                        <!-- END BUTTONS -->
+                        </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Delete Modal -->
 {%endblock%}
 
 {%block scripts%}
