--- a/templates/warehousing/admin/content/viewSupplies.html
+++ b/templates/warehousing/admin/content/viewSupplies.html
@@ -10,16 +10,17 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>View Supply</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
                         <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
                         <li class="breadcrumb-item" id ="supplies_nav"><a href="/warehousing/admin/supplies">Supplies</a></li>                    </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
         </div><!-- /.container-fluid -->
