--- a/templates/warehousing/admin/content/warehouses.html
+++ b/templates/warehousing/admin/content/warehouses.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Warehouses</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,7 +22,7 @@
                         <li class="breadcrumb-item" id ="warehouses_nav">Warehouses</li>
                         <script>if(window.location.pathname == '/warehousing/admin/warehouses/'){document.getElementById("warehouses_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <div class="row">     
@@ -115,8 +116,8 @@
                                 <input type="hidden" name="uuid" id="uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="warehouse_manager_id" id="warehouse_manager_idLabel">Warehouse Manager</label>
-                                        <select class="form-control" id="warehouse_manager_id" name="warehouse_manager_id">
+                                        <label for="warehouse_manager_id" id="warehouse_manager_idLabel">Warehouse Manager</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="warehouse_manager_id" name="warehouse_manager_id">
                                         </select>
                                     </div>
                                 </div>
@@ -124,7 +125,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="warehouse_name" id="warehouse_nameLabel">Warehouse Name</label>
+                                        <label for="warehouse_name" id="warehouse_nameLabel">Warehouse Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="warehouse_name" placeholder="Warehouse Name" required>
                                     </div>
                                 </div>
@@ -132,7 +133,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="warehouse_contact" id="warehouse_contactLabel">Contact #</label>
+                                        <label for="warehouse_contact" id="warehouse_contactLabel">Contact #</label> <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="warehouse_contact" placeholder="Enter Warehouse Contact#" required>
                                     </div>
                                 </div>
@@ -140,7 +141,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="warehouse_address" id="warehouse_addressLabel">Address </label>
+                                        <label for="warehouse_address" id="warehouse_addressLabel">Address </label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="warehouse_address" placeholder="Enter Warehouse Address" required>
                                     </div>
                                 </div>
@@ -148,7 +149,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="warehouse_description" id="warehouse_descriptionLabel">Description </label>
+                                        <label for="warehouse_description" id="warehouse_descriptionLabel">Description </label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="warehouse_description" placeholder="Enter Warehouse Description" required>
                                     </div>
                                 </div>
@@ -188,8 +189,8 @@
                                 <input type="hidden" name="e_uuid" id="e_uuid" value="" />
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_warehouse_manager_id" id="e_warehouse_manager_idLabel">Warehouse Manager</label>
-                                        <select class="form-control" id="e_warehouse_manager_id" name="e_warehouse_manager_id">
+                                        <label for="e_warehouse_manager_id" id="e_warehouse_manager_idLabel">Warehouse Manager</label> <span class="required-field"> </span>
+                                        <select class="form-control js-example-basic-single" id="e_warehouse_manager_id" name="e_warehouse_manager_id">
                                             
                                         </select>
                                     </div>
@@ -198,7 +199,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_warehouse_name" id="e_warehouse_nameLabel">Warehouse Name</label>
+                                        <label for="e_warehouse_name" id="e_warehouse_nameLabel">Warehouse Name</label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_warehouse_name" placeholder="Warehouse Name" required>
                                     </div>
                                 </div>
@@ -206,7 +207,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_warehouse_contact" id="e_warehouse_contactLabel">Contact #</label>
+                                        <label for="e_warehouse_contact" id="e_warehouse_contactLabel">Contact #</label> <span class="required-field"> </span>
                                         <input type="number" class="form-control" id="e_warehouse_contact" placeholder="Enter Warehouse Contact#" required>
                                     </div>
                                 </div>
@@ -214,7 +215,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_warehouse_address" id="e_warehouse_addressLabel">Address </label>
+                                        <label for="e_warehouse_address" id="e_warehouse_addressLabel">Address </label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_warehouse_address" placeholder="Enter Warehouse Address" required>
                                     </div>
                                 </div>
@@ -222,7 +223,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label for="e_warehouse_description" id="e_warehouse_descriptionLabel">Description </label>
+                                        <label for="e_warehouse_description" id="e_warehouse_descriptionLabel">Description </label> <span class="required-field"> </span>
                                         <input type="input" class="form-control" id="e_warehouse_description" placeholder="Enter Warehouse Description" required>
                                     </div>
                                 </div>
@@ -241,6 +242,38 @@
         </div><!-- /.modal -->
     </div>
     <!-- END Editing User Modal -->
+       <!-- Delete Modal -->
+       <div class="modal fade" id="delete_modal">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <i class= "fas fa-exclamation-triangle mr-1"></i>
+                        Confirmation</h4>
+                    <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+                <div class="modal-body" id="modal_viewing">
+                        <!-- CONTENT -->
+                        <form id="d_form_id" name="d_form_id" enctype="multipart/form_data">
+                            <div class="card-body">
+                                Are you sure you want to Delete?
+                                <input type="hidden" name="d_uuid" id="d_uuid" value="" />
+                            </div>
+                        <!-- END CONTENT  -->
+                            <!-- BUTTONS -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-danger" id="button_delete">Yes, Delete it!<i class= "fas fa-trash-alt ml-1"></i></button>
+                            </div>
+                        <!-- END BUTTONS -->
+                        </form>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+    </div>
+    <!-- END Delete Modal -->
 {%endblock%}
 
 {%block scripts%}
