--- a/templates/warehousing/manager/default/base.html
+++ b/templates/warehousing/manager/default/base.html
@@ -21,6 +21,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Warehousing | Hospital Management System</title>
+
+    <link rel="stylesheet" href="{{url_for('static', path='/plugins/select2/css/select2.css')}}"/>
     
     <!-- jQuery -->
     <script src="{{url_for('static', path='/plugins/jquery/jquery.min.js')}}"></script>
@@ -42,6 +44,7 @@
     <!-- Additional CSS -->
     <link rel="stylesheet" href="{{url_for('static', path='/plugins/toastr/toastr.css')}}">
     <link rel="stylesheet" href="{{url_for('static', path='/plugins/sweetalert2/sweetalert2.css')}}">
+
 
     <!-- Common JS -->
     <script src="{{url_for('static', path='/dist/js/warehousing/common.js')}}"></script>
@@ -76,49 +79,98 @@
 <div class="wrapper">
 
   <!-- Preloader -->
-    <div class="preloader flex-column justify-content-center align-items-center">
+    <!-- <div class="preloader flex-column justify-content-center align-items-center">
         <div class="spinner-border text-primary" role="status" style="width: 2.5rem; height: 2.5rem;"></div>
-    </div>
+    </div> -->
   
-  <!-- Top Navbar -->
+    <!-- Top Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+                
+        <!-- Left navbar links toggler (for responsive) -->
+        <button class="nav-link navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+        </button>
+        
         <!-- Left navbar links -->
-        <!-- <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item d-none d-sm-inline-block">
-                <a href="#" class="nav-link">Contact</a>
-            </li>
-        </ul> -->
-        <!-- /.navbar-nav -->
-
+        <div class="collapse navbar-collapse order-3" id="navbarCollapse">
+            <ul class="navbar-nav">
+        
+                <!-- Sidebar Toggler -->
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+                        <i class="fas fa-bars"></i>
+                    </a>
+                </li>
+        
+                <!-- Hospital Core -->
+                <!-- <li class="nav-item dropdown">
+                    <a 
+                        href="#" 
+                        data-toggle="dropdown" 
+                        class="nav-link dropdown-toggle"
+                    >Hospital Core</a>
+                    
+                    <ul class="dropdown-menu dropdown-menu-left">
+                        <li><a href="#" class="dropdown-item">Patient Management</a></li>
+                        <li><a href="#" class="dropdown-item">Treatment Management</a></li>
+                        <li><a href="#" class="dropdown-item">Pharmacy</a></li>
+                        <li><a href="#" class="dropdown-item">Medical Record</a></li>
+                        <li><a href="#" class="dropdown-item">Doctors Management</a></li>
+                        <li><a href="#" class="dropdown-item">Visitors Management</a></li>
+                    </ul>
+                </li> -->
+        
+                <!-- Human Resource -->
+                <!-- <li class="nav-item dropdown">
+                    <a 
+                        href="#" 
+                        data-toggle="dropdown" 
+                        class="nav-link dropdown-toggle"
+                    >Human Resource</a>
+                    
+                    <ul class="dropdown-menu dropdown-menu-left">
+                        <li><a href="#" class="dropdown-item">Core Human Capital Management</a></li>
+                        <li><a href="#" class="dropdown-item">Recruitment Management</a></li>
+                        <li><a href="#" class="dropdown-item">Time & Attendance</a></li>
+                        <li><a href="#" class="dropdown-item">Performance Management</a></li>
+                    </ul>
+                </li> -->
+        
+                <!-- Finance -->
+                <!-- <li class="nav-item dropdown">
+                    <a 
+                        href="#" 
+                        data-toggle="dropdown" 
+                        class="nav-link dropdown-toggle"
+                    >Finance</a>
+                    
+                    <ul class="dropdown-menu dropdown-menu-left">
+                        <li><a href="#" class="dropdown-item">General Ledger</a></li>
+                        <li><a href="#" class="dropdown-item">Accounts Payable/Receivable</a></li>
+                        <li><a href="#" class="dropdown-item">Collection/Disbursement</a></li>
+                    </ul>
+                </li> -->
+        
+                <!-- Logistics -->
+                <!-- <li class="nav-item dropdown">
+                    <a 
+                        href="#" 
+                        data-toggle="dropdown" 
+                        class="nav-link dropdown-toggle text-primary"
+                    >Logistics</a>
+                    
+                    <ul class="dropdown-menu dropdown-menu-left">
+                        <li><a href="#" class="dropdown-item">Procurement Management</a></li>
+                        <li><a href="#" class="dropdown-item active">Warehousing Management</a></li>
+                        <li><a href="#" class="dropdown-item">Asset Management</a></li>
+                        <li><a href="#" class="dropdown-item">Project Management</a></li>
+                    </ul>
+                </li> -->
+            </ul>
+        </div>  
+        
         <!-- Right navbar links -->
-        <ul class="navbar-nav ml-auto">
-            <!-- Navbar Search -->
-            <li class="nav-item">
-                <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-                    <i class="fas fa-search"></i>
-                </a>
-                <div class="navbar-search-block">
-                    <form class="form-inline">
-                        <div class="input-group input-group-sm">
-                            <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                            <div class="input-group-append">
-                                <button class="btn btn-navbar" type="submit">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                                <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                                    <i class="fas fa-times"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </li>
+        <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
 
             <!-- Notifications Dropdown Menu -->
             <li class="nav-item dropdown">
@@ -142,35 +194,46 @@
                     </div>
                 </div>
             </li>
-
-            <!-- User Account Dropdown Menu -->
+        
+            <!-- User Menu -->
             <li class="nav-item dropdown">
-                <a class="nav-link" data-toggle="dropdown" href="#">
-                    <b>Account</b>
+                <a href="#" class="nav-link" data-toggle="dropdown" role="button">
+                    <i class="fas fa-user-circle"></i>
                     <!-- <span class="badge badge-warning navbar-badge">15</span> -->
                 </a>
-                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                    <span class="dropdown-item dropdown-header"></span>
+        
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a href="#" class="dropdown-item d-flex align-items-center">
+                        <div class="mr-3" style="width: 1.25rem">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <span>Profile</span>
+                    </a>
+                    <a href="#" class="dropdown-item d-flex align-items-center">
+                        <div class="mr-3" style="width: 1.25rem">
+                            <i class="fas fa-cog"></i>
+                        </div>
+                        <span>Settings</span>
+                    </a>
+        
                     <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-user-circle mr-2"></i> Profile
+                    
+                    <a
+                        href="#"
+                        role="button" 
+                        class="dropdown-item d-flex align-items-center" 
+                        data-toggle="modal" 
+                        data-target="#logout_modal"
+                    >
+                        <div class="mr-3" style="width: 1.25rem">
+                            <i class="fas fa-sign-out-alt"></i>
+                        </div>
+                        <span>Log out</span>
                     </a>
-                    <a href="#" class="dropdown-item">
-                        <i class="fas fa-cogs mr-2"></i> Settings
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item" onClick="return logout()">
-                        <i class="fas fa-sign-out-alt mr-2"></i> Logout
-                    </a>
-                    <!-- <div class="dropdown-divider"></div>
-                    <a href="#" class="dropdown-item dropdown-footer">Logout</a> -->
                 </div>
             </li>
-
         </ul>
-        <!-- /.navbar-nav -->
     </nav>
-    <!-- /.navbar -->
 
 <!-- END HEADERRRRRRRRRRRR -->
 <!-- ============================================================================== -->
@@ -183,17 +246,34 @@
         <!-- Brand Logo -->
         <a href="#" class="brand-link">
             <img src="{{url_for('static', path='/dist/img/AdminLTELogo.png')}}" alt="AdminLTE Logo" class="brand-image img-circle border" style="opacity: .8">
-            <span class="brand-text font-weight-light">Warehousing</span>
+            <span class="brand-text font-weight-light">HoMIES</span>
         </a>
         <!-- Sidebar -->
         <div class="sidebar">
-            <!-- Sidebar user (optional) -->
+
+            <!-- Sidebar user -->
             <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+
+                <!-- User Image -->
                 <div class="image">
-                    <img src="{{url_for('static', path='/dist/img/user2-160x160.jpg')}}" class="img-circle border" alt="User Image">
+                    <img 
+                        src="{{url_for('static', path='/dist/img/user2-160x160.jpg')}}" 
+                        class="img-circle border" 
+                        alt="User Image"
+                    >
                 </div>
-                <div class="info mr-1">
-                    <a href="#" class="d-block text-truncate">Alexander Pierce With A Long Surname</a>
+                
+                <!-- User Full Name -->
+                <div class="info mr-1 w-100" id="userFullNameDisplay">
+                    
+                    <!-- User Full Name -->
+                    <a href="#" class="nav-item text-truncate" id="userFullName">Juan S. Dela Cruz</a>
+
+                    <!-- User Position -->
+                    <div class="small text-secondary text-truncate" id="userPosition">Manager</div>
+                    
+                    <!-- User Department -->
+                    <div class="small text-secondary text-truncate" id="userDepartment">Warehousing Department</div>
                 </div>
             </div>
 
@@ -213,6 +293,12 @@
             <nav class="mt-2">
                 <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                     <!-- Sidebar Menu -->       
+
+                    <!-- Module Name -->
+                    <li class="nav-header font-weight-bold text-wrap">WAREHOUSING SYSTEM</li>
+                    
+
+
                     <li class="nav-header"><b>Dashboard</b></li>
                     <li class="nav-item">
                         <a href="/warehousing/manager/dashboard" class="nav-link" id="dashboard_sidebar">
@@ -375,6 +461,8 @@
 </div>
 <!-- ./wrapper -->
 
+<script src="{{url_for('static', path='/plugins/select2/js/select2.min.js')}}"></script>
+
 <!-- Bootstrap 4 -->
 <script src="{{url_for('static', path='/plugins/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
 <!-- overlayScrollbars -->
@@ -403,6 +491,7 @@
 <script src="{{url_for('static', path='/plugins/moment/moment.min.js')}}"></script>
 <script src="{{url_for('static', path='/plugins/sweetalert2/sweetalert2.min.js')}}"></script>
 <script src="{{url_for('static', path='/dist/js/warehousing/access/logout.js')}}"></script>
+
 
 <!-- <script src="{{url_for('static', path='/dist/js/warehousing/manager/baseManager.js')}}"></script> -->
 
