--- a/templates/warehousing/staff/content/inventories.html
+++ b/templates/warehousing/staff/content/inventories.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Inventories</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/staff/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,7 +22,7 @@
                         <li class="breadcrumb-item" id ="inventories_nav">Inventories</li>
                         <script>if(window.location.pathname == '/warehousing/staff/inventories/'){document.getElementById("inventories_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <br>
