--- a/templates/warehousing/staff/content/inventory_locations.html
+++ b/templates/warehousing/staff/content/inventory_locations.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Inventory Locations</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/staff/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,7 +22,7 @@
                         <li class="breadcrumb-item" id ="inventory_locations_nav">Inventory Locations</li>
                         <script>if(window.location.pathname == '/warehousing/staff/inventory_locations/'){document.getElementById("inventory_locations_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <br>
