--- a/templates/warehousing/staff/content/supplies.html
+++ b/templates/warehousing/staff/content/supplies.html
@@ -11,10 +11,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Supplies</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/staff/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -22,7 +23,7 @@
                         <li class="breadcrumb-item" id ="supplies_nav">Supplies</li>
                         <script>if(window.location.pathname == '/warehousing/staff/supplies/'){document.getElementById("supplies_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <br>
