--- a/templates/warehousing/staff/content/supply_categories.html
+++ b/templates/warehousing/staff/content/supply_categories.html
@@ -10,10 +10,11 @@
                 <!-- Title -->
                 <div class="col-sm-6">
                     <h1>Supply Categories</h1>
+                    <p class="text-muted">This is subheading</p>
                 </div>
 
                 <!-- Breadcrumb -->
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/staff/dashboard">Home </a></li>
                         <li>&nbsp; / &nbsp;</li>
@@ -21,7 +22,7 @@
                         <li class="breadcrumb-item" id ="supply_categories_nav">Supply Categories</li>
                         <script>if(window.location.pathname == '/warehousing/staff/supply_categories/'){document.getElementById("supply_categories_nav").classList.add('active')}</script>
                     </ol>
-                </div>
+                </div> -->
                 <!-- / breadcrumb -->
             </div>
             <br>
